2008-10-18  Andras Varga

	* implemented module output window filtering: modules can be selected
	using a checkbox tree dialog. Bound to Ctrl+H.

	* implemented "Run until message", both in the Run Until dialog and
	in message objects' context menu

	* event banner text revised, plus now includes message name and class
	as well; added "Short event banners" checkbox to options dialog

2008-05-17  Andras Varga

	* better toolbar icons
	* implemented show/hide arrowheads
	* implemented increase/decrease icon size
	* expanded context menu in graphical module inspectors
	* added corresponding keyboards shortcuts

2008-04-19  Andras Varga

	* layouting process can now be stopped if it takes too long

2008-03-29  Andras Varga

	* Implemented context menu for text windows. Includes Word wrap on/off,
	and Select all (Ctrl+A) features

2008-03-21  Andras Varga

	Fixed a number of issues with the Aqua-based Tcl/Tk on Mac OS/X:
	- tooltips got focus. solution: magic code from http://wiki.tcl.tk/3060
	- focus problem in dialogs (no initial focus when dialog came up)
	  solution: introduced proc setinitialdialogfocus
        - some "(help)" links in dialogs didn't work due to focus problems
          solution: introduced proc waitforfocus
	- button 2 and 3 are reversed (compared to X11 and Windows)
	  solution: use variables $B2 and $B3

2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	* inifile syntax change: [Tkenv] config entries became tkenv-...;
	however, see below:

	* inifile entries for options that also appear in the Simulation
	Options dialog have been REMOVED: tkenv-slowexec-delay=,
	tkenv-update-freq-fast=, tkenv-animation-enabled=, etc., because
	they took no effect anyway (when a .tkenvrc file was present,
	settings were taken from that instead of omnetpp.ini).

	* default configuration and default run number (they cause the
	network to be set up automatically when Tkenv starts up)